# hailort-apps

hailort/: CMakeLists.txt
hailort/hailo_test/: CMakeLists.txt  hailo_test.cpp  hailo_test.hpp
